# task_block_dict

./: .gitignore  README.md  pyproject.toml
block_dict/scripts/: task1_dict.py  task2_count_all.py  task3_collect_indexes.py  task4_all_unique.py  task5_toggle.py  task6_diff_keys.py  task7_apply_diff.py  task_bqs.py  task_dna_to_rna.py  task_find_where.py  task_gen_diff.py  task_merged.py  task_roman_arabic.py  task_scrabble.py
