[tool.poetry]
name = "block_dict"
version = "0.1.0"
description = "практические задания из блока курса про словари и множества"
authors = ["alexandertarakanov <alex.artoff@gmail.com>"]
packages = [{include = "block_dict"},]

[tool.poetry.scripts]
t1-dict = "block_dict.scripts.task1_dict:main"
t2-count = "block_dict.scripts.task2_count_all:main"
t3-cllcindx = "block_dict.scripts.task3_collect_indexes:main"
t4-alluniq = "block_dict.scripts.task4_all_unique:main"
t5-toggle = "block_dict.scripts.task5_toggle:main"
t6-diffkeys = "block_dict.scripts.task6_diff_keys:main"
t7-applydiff = "block_dict.scripts.task7_apply_diff:main"
task-2rna = "block_dict.scripts.task_dna_to_rna:main"
task-bqs = "block_dict.scripts.task_bqs:main"
task-2r2a = "block_dict.scripts.task_roman_arabic:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
